test fix on mobile

--- a/src/components/renameWindow/renameWindow.scss
+++ b/src/components/renameWindow/renameWindow.scss
@@ -6,7 +6,7 @@
 	left: 50%;
 	transform: translateX(-50%);
 	z-index: 5;
-	background-color: rgb(255, 255, 255);
+	background-color: #ffffff;
 	color: black;
 	box-shadow: 0 2.8px 6.1px -24px rgba(0, 0, 0, 0.02),
 		0 6.7px 14.8px -24px rgba(0, 0, 0, 0.028),
